[package]
name = "two_level_sse"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15"
num-complex = "0.4"
rand = "0.8"
rayon = "1.7"
plotters = "0.3"
statrs = "0.16"
csv     = "1.1"    # for ReaderBuilder and writing CSV
indicatif = "0.17"      # for progress bars


[profile.release]
opt-level = 3

